--- a/ImageCount/ImagesOfTheDay.ipynb
+++ b/ImageCount/ImagesOfTheDay.ipynb
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "if dayObs=='Today':\n",
-    "    day_obs = (Time.now() - TimeDelta(0.5, format='jd')).iso[:10]"
+    "    dayObs = (Time.now() - TimeDelta(0.5, format='jd')).iso[:10]"
    ]
   },
   {
