--- a/Run7/CheckPDTraces.ipynb
+++ b/Run7/CheckPDTraces.ipynb
@@ -55,7 +55,6 @@
     "from lsst.daf.butler import Butler\n",
     "import pylab\n",
     "import traceback\n",
-    "import tqdm\n",
     "butler = Butler('embargo_new', collections=['LSSTCam/raw/all', 'LSSTCam/calib/unbounded'])"
    ]
   },
@@ -195,7 +194,7 @@
     }
    ],
    "source": [
-    "for anexposure in tqdm.tqdm(list(exposures)[::]):\n",
+    "for anexposure in list(exposures)[::]:\n",
     "    try:\n",
     "        photodiode = butler.get('photodiode', collections=collections,detector=detector, exposure=anexposure.id)\n",
     "        table = photodiode.toTable()[0]\n",
@@ -261,7 +260,7 @@
     }
    ],
    "source": [
-    "for anexposure in tqdm.tqdm(list(exposures)[::]):\n",
+    "for anexposure in list(exposures)[::]:\n",
     "    try:\n",
     "        photodiode = butler.get('photodiode', collections=collections, detector=detector, exposure=anexposure.id)\n",
     "        table = photodiode.toTable()[0]\n",
