--- a/Run7/ImagesOfTheDay.ipynb
+++ b/Run7/ImagesOfTheDay.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "dayObs = 'Today'\n",
-    "run = None"
+    "run = \"None\""
    ]
   },
   {
@@ -130,7 +130,7 @@
    "source": [
     "exposureList = []\n",
     "\n",
-    "if run is None:\n",
+    "if run is \"None\":\n",
     "    where=f\"exposure.day_obs={dayObs} and instrument='LSSTCam'\"\n",
     "else:\n",
     "    where=f\"exposure.science_program={run} and instrument='LSSTCam'\"    \n",
