--- a/Run7/ImagesOfTheDay.ipynb
+++ b/Run7/ImagesOfTheDay.ipynb
@@ -130,7 +130,7 @@
    "source": [
     "exposureList = []\n",
     "\n",
-    "if run is \"None\":\n",
+    "if run == \"None\":\n",
     "    where=f\"exposure.day_obs={dayObs} and instrument='LSSTCam'\"\n",
     "else:\n",
     "    where=f\"exposure.science_program={run} and instrument='LSSTCam'\"    \n",
