--- a/Run7/ImagesOfTheDay.ipynb
+++ b/Run7/ImagesOfTheDay.ipynb
@@ -67,8 +67,7 @@
    ],
    "source": [
     "if dayObs=='Today':\n",
-    "    dayObs = (Time.now() - TimeDelta(0.5, format='jd')).iso[:10].replace('-','')\n",
-    "dayObs"
+    "    dayObs = (Time.now() - TimeDelta(0.5, format='jd')).iso[:10].replace('-','')"
    ]
   },
   {
