--- a/Run7/CheckPDTraces.ipynb
+++ b/Run7/CheckPDTraces.ipynb
@@ -108,7 +108,7 @@
     "    exposures = list(butler.registry.queryDimensionRecords(\"exposure\", \n",
     "                    where=f\"exposure.science_program='{run}' and instrument='LSSTCam' and exposure.observation_reason='flat' and exposure.observation_type='flat'\"))\n",
     "else:\n",
-    "    exposure = [ exposure ]"
+    "    exposures = [ exposure ]"
    ]
   },
   {
