fixed a few issues

--- a/Run7/CheckPDTraces.ipynb
+++ b/Run7/CheckPDTraces.ipynb
@@ -108,7 +108,11 @@
     "    exposures = list(butler.registry.queryDimensionRecords(\"exposure\", \n",
     "                    where=f\"exposure.science_program='{run}' and instrument='LSSTCam' and exposure.observation_reason='flat' and exposure.observation_type='flat'\"))\n",
     "else:\n",
-    "    exposures = [ exposure ]"
+    "    class hoge:\n",
+    "        pass\n",
+    "    huga=hoge()\n",
+    "    huga.id = exposure\n",
+    "    exposures = [ huga ]"
    ]
   },
   {
