--- a/Run7/ImagesOfTheDay.ipynb
+++ b/Run7/ImagesOfTheDay.ipynb
@@ -110,7 +110,7 @@
     "    exposureList.append([record.id, record, nimage, hasPD])\n",
     "exposureList.sort(key=lambda x: x[0])\n",
     "table = Table(rows=[ (\n",
-    "            f'<a href=http://lsstcam-mcm.cp.lsst.org/FITSInfo/view.html?image={record.obs_id})>{record.obs_id}</a>',\n",
+    "            f'<a href=http://lsstcam-mcm.cp.lsst.org/FITSInfo/view.html?image={record.obs_id}>{record.obs_id}</a>',\n",
     "            record.timespan.begin.iso,\n",
     "            record.seq_num,\n",
     "            record.observation_type,\n",
