fixed a few issues

--- a/Run7/CheckPDTraces.ipynb
+++ b/Run7/CheckPDTraces.ipynb
@@ -111,7 +111,7 @@
     "    class hoge:\n",
     "        pass\n",
     "    huga=hoge()\n",
-    "    huga.id = exposure\n",
+    "    huga.id = int(exposure)\n",
     "    exposures = [ huga ]"
    ]
   },
