added failure frames

--- a/Run7/ImagesOfTheDay.ipynb
+++ b/Run7/ImagesOfTheDay.ipynb
@@ -691,46 +691,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "8e69fb9b-6d5b-4201-8549-7e9bbefd24cc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-13T21:12:47.483861Z",
-     "iopub.status.busy": "2024-10-13T21:12:47.483654Z",
-     "iopub.status.idle": "2024-10-13T21:12:47.489139Z",
-     "shell.execute_reply": "2024-10-13T21:12:47.488736Z",
-     "shell.execute_reply.started": "2024-10-13T21:12:47.483848Z"
+     "iopub.execute_input": "2024-10-13T21:23:01.081969Z",
+     "iopub.status.busy": "2024-10-13T21:23:01.081632Z",
+     "iopub.status.idle": "2024-10-13T21:23:01.085841Z",
+     "shell.execute_reply": "2024-10-13T21:23:01.085453Z",
+     "shell.execute_reply.started": "2024-10-13T21:23:01.081953Z"
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(<Table length=1>\n",
-       "                                                      col0                                                     ...\n",
-       "                                                     str109                                                    ...\n",
-       " ------------------------------------------------------------------------------------------------------------- ...\n",
-       " <a href=http://lsstcam-mcm.cp.lsst.org/FITSInfo/view.html?image=MC_C_20241013_000300>MC_C_20241013_000300</a> ...,\n",
-       " <Table length=1>\n",
-       "                                                      col0                                                     ...\n",
-       "                                                     str109                                                    ...\n",
-       " ------------------------------------------------------------------------------------------------------------- ...\n",
-       " <a href=http://lsstcam-mcm.cp.lsst.org/FITSInfo/view.html?image=MC_C_20241013_000338>MC_C_20241013_000338</a> ...)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<a href=http://lsstcam-mcm.cp.lsst.org/FITSInfo/view.html?image=MC_C_20241013_000300>MC_C_20241013_000300</a> <a href=http://lsstcam-mcm.cp.lsst.org/FITSInfo/view.html?image=MC_C_20241013_000338>MC_C_20241013_000338</a>\n"
+     ]
     }
    ],
    "source": [
-    "table[:-1][numpy.diff(table['col2'])!=1], table[1:][numpy.diff(table['col2'])!=1]"
+    "for a, b in zip(table[:-1][numpy.diff(table['col2'])!=1], table[1:][numpy.diff(table['col2'])!=1]):\n",
+    "    print(a['col0'], b['col0'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b21f0986-82fb-4ccb-adf5-dd985612edaf",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-10-13T21:22:49.594344Z",
+     "iopub.status.busy": "2024-10-13T21:22:49.593846Z",
+     "iopub.status.idle": "2024-10-13T21:22:49.596366Z",
+     "shell.execute_reply": "2024-10-13T21:22:49.596009Z",
+     "shell.execute_reply.started": "2024-10-13T21:22:49.594329Z"
+    }
+   },
+   "source": [
+    "# Changes in number of images ingested"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "edff0af2-b008-4d11-af46-51f834d7c27f",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-10-13T21:25:27.535585Z",
+     "iopub.status.busy": "2024-10-13T21:25:27.535358Z",
+     "iopub.status.idle": "2024-10-13T21:25:27.539713Z",
+     "shell.execute_reply": "2024-10-13T21:25:27.539319Z",
+     "shell.execute_reply.started": "2024-10-13T21:25:27.535569Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<a href=http://lsstcam-mcm.cp.lsst.org/FITSInfo/view.html?image=MC_C_20241013_000214>MC_C_20241013_000214</a> 197 <a href=http://lsstcam-mcm.cp.lsst.org/FITSInfo/view.html?image=MC_C_20241013_000215>MC_C_20241013_000215</a> 105\n",
+      "<a href=http://lsstcam-mcm.cp.lsst.org/FITSInfo/view.html?image=MC_C_20241013_000215>MC_C_20241013_000215</a> 105 <a href=http://lsstcam-mcm.cp.lsst.org/FITSInfo/view.html?image=MC_C_20241013_000216>MC_C_20241013_000216</a> 197\n",
+      "<a href=http://lsstcam-mcm.cp.lsst.org/FITSInfo/view.html?image=MC_C_20241013_000513>MC_C_20241013_000513</a> 197 <a href=http://lsstcam-mcm.cp.lsst.org/FITSInfo/view.html?image=MC_C_20241013_000514>MC_C_20241013_000514</a> 190\n",
+      "<a href=http://lsstcam-mcm.cp.lsst.org/FITSInfo/view.html?image=MC_C_20241013_000514>MC_C_20241013_000514</a> 190 <a href=http://lsstcam-mcm.cp.lsst.org/FITSInfo/view.html?image=MC_C_20241013_000515>MC_C_20241013_000515</a> 197\n",
+      "<a href=http://lsstcam-mcm.cp.lsst.org/FITSInfo/view.html?image=MC_C_20241013_000516>MC_C_20241013_000516</a> 197 <a href=http://lsstcam-mcm.cp.lsst.org/FITSInfo/view.html?image=MC_C_20241013_000517>MC_C_20241013_000517</a> 187\n",
+      "<a href=http://lsstcam-mcm.cp.lsst.org/FITSInfo/view.html?image=MC_C_20241013_000517>MC_C_20241013_000517</a> 187 <a href=http://lsstcam-mcm.cp.lsst.org/FITSInfo/view.html?image=MC_C_20241013_000518>MC_C_20241013_000518</a> 112\n",
+      "<a href=http://lsstcam-mcm.cp.lsst.org/FITSInfo/view.html?image=MC_C_20241013_000518>MC_C_20241013_000518</a> 112 <a href=http://lsstcam-mcm.cp.lsst.org/FITSInfo/view.html?image=MC_C_20241013_000519>MC_C_20241013_000519</a> 15\n",
+      "<a href=http://lsstcam-mcm.cp.lsst.org/FITSInfo/view.html?image=MC_C_20241013_000519>MC_C_20241013_000519</a> 15 <a href=http://lsstcam-mcm.cp.lsst.org/FITSInfo/view.html?image=MC_C_20241013_000520>MC_C_20241013_000520</a> 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a, b in zip(table[:-1][numpy.diff(table['col8'])!=0], table[1:][numpy.diff(table['col8'])!=0]):\n",
+    "    print(a['col0'], a['col8'], b['col0'], b['col8'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edff0af2-b008-4d11-af46-51f834d7c27f",
+   "id": "984405dd-a781-40ba-9a60-575e0f48ab8e",
    "metadata": {},
    "outputs": [],
    "source": []
